--- a/editing.ipynb
+++ b/editing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "import json\n",
     "import os\n",
     "\n",
-    "inputfile = \"queenboat.html\"\n",
+    "inputfile = \"input.html\"\n",
     "outputfile = \"index.html\"\n",
     "highlight = \"default cursor highlight\"\n",
     "musicFile = \"music.mp3\"\n",
