--- a/editing.ipynb
+++ b/editing.ipynb
@@ -4,19 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'input.html'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [21]\u001b[0m, in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m highlight \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdefault cursor highlight\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      8\u001b[0m musicFile \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmusic.mp3\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m---> 10\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43minputfile\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m file: \n\u001b[1;32m     11\u001b[0m     soup \u001b[38;5;241m=\u001b[39m BeautifulSoup(file\u001b[38;5;241m.\u001b[39mread(), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhtml.parser\u001b[39m\u001b[38;5;124m'\u001b[39m) \n\u001b[1;32m     13\u001b[0m grammarly \u001b[38;5;241m=\u001b[39m soup\u001b[38;5;241m.\u001b[39mfind(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgrammarly-desktop-integration\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'input.html'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup \n",
     "import json\n",
@@ -35,6 +23,11 @@
     "\n",
     "cssblock = soup.find('style', {'id': 'player-style'})\n",
     "with open('player-style.css') as file:\n",
+    "    cssblock.clear()\n",
+    "    cssblock.append(file.read())\n",
+    "\n",
+    "cssblock = soup.find('style', {'id': 'base-style'})\n",
+    "with open('base-style.css') as file:\n",
     "    cssblock.clear()\n",
     "    cssblock.append(file.read())\n",
     "\n",
